# chatbot-class

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  download.sh  pyproject.toml
Lecture 1. Introduction to Langchain/: LangChain_UAE_Holidays_Demo.ipynb
Lecture 2. Models/: LangChain. Lecture 2a. Models.ipynb  LangСhain Lecture 2b. Text Generation. Decoding Strategies in Large Language Models.ipynb  LangСhain Lecture 2c. Falcon QLoRA Finetuning.ipynb
Part 1. Langchain/: LangChain 101.ipynb  LangChain Cookbook Part 1 - Fundamentals.ipynb  LangChain Cookbook Part 2 - Use Cases.ipynb  Vector Search.ipynb
Part 2. Building Chatbots/: Chains.ipynb
chatbot_class/: ENCODERS.md  academic.py  chroma.py  encoders.py
encoders/: encode.py
envs/: bing.env  openai.env
