[tool.poetry]
name = "chatbot-class"
version = "0.1.0"
description = "Course covering generative AI, large language models (LLMs), vector search, retrieval aided generation (RAG), LLM fine-tuning."
authors = ["Russell Jurney <rjurney@graphlet.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatbot_class"}]

[tool.poetry.urls]
"Company Homepage" = "https://graphlet.ai"
"Class Homepage" = "https://technologytransfer.it/events-mec/chatbots-bootcamp/"
"Teacher Homepage" = "https://linkedin.com/in/russelljurney"
"Code Repository" = "https://github.com/Graphlet-AI/chatbot-class"
"Bug Tracker" = "https://github.com/Graphlet-AI/chatbot-class/issues"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.97.0"
chromadb = ">=0.4.19"
huggingface-hub = ">=0.16.4"
langchain = ">=0.0.350"
langchain-decorators = "^0.2.2"
langchainhub = "^0.1.13"
llama-index = "^0.8.33"
lxml = "^4.9.3"
marko = "^2.0.0"
openai = "^0.28.0"
opensearch-dsl = ">=2.1.0"
opensearch-py = ">=2.4.0"
pandas = ">=2.1.4"
pydantic = ">=2.5.0"
pypdf = "^3.16.2"
scikit-learn = ">=1.3.2"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.1"
torch = "^2.1.0"
wandb = "^0.15.11"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
ipykernel = ">=6.27.0"
ipython = "^8.15.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
s3cmd = "^2.4.0"
nbdime = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
include = ["chatbot_class", "test"]

[tool.isort]
profile = "black"
src_paths = ["chatbot_class", "test"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["chatbot_class", "test"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
